TEST_PROGRAMS/INVALID/mathieu_boucher/invalid5.min
#print and read corner cases as well as comments
#!@#$%^&%$#@$%^&*()*&()_QWERTYUIOPLKBGVFDSAZXCVBNM<>?:|}{789654123}

#with paren
print ( x );

#nothing
print ;

#with paren
read (x);

#nothing
read;

